fix menu on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@
 	}
 	
 	.pb_navbar {
-		margin-top: 35px !important;
+		margin-top: 0 !important;
 	}
 }
 
@@ -126,7 +126,7 @@
 	}
 	
 	.pb_navbar {
-		margin-top: 35px !important;
+		margin-top: 0 !important;
 	}
 }
 
